opam-version: "1.2"
name: "ocaml-torrent"
vers: "0.1"
maintainer: "phlalx@users.noreply.github.com"
authors: ["phlalx@users.noreply.github.com"]
homepage: "https://github.com/phlalx/ocaml-torrent"
bug-reports: "https://github.com/phlalx/ocaml-torrent/issues"
dev-repo: "https://github.com/phlalx/ocaml-torrent.git"
license: "LGPL-3.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [                                                                       
]      
available: [ ocaml-version >= "4.04.2" ]
descr: "
Bittorrent client

OCaml-torrent is a simple bittorrent/DHT client.
"
