opam-version: "1.2"
name: "sawadee"
version: "0.1"
maintainer: "phlalx@users.noreply.github.com"
authors: ["phlalx@users.noreply.github.com"]
homepage: "https://github.com/phlalx/sawadee"
bug-reports: "https://github.com/phlalx/sawadee/issues"
license: "GPLv3"
dev-repo: "https://github.com/phlalx/sawadee.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {>= "2.8.5"}
  "core" {>= "v0.9.1"}
  "async" {>= "v0.9.0"}
  "ppx_jane" {>= "v0.9.0"}
  "uri" {>= "1.9.4"}
  "cohttp" {>= "0.99.0"}
  "cohttp-async" {>= "0.99.0"}
  "sha" {>= "1.9"}
  "hex" {>= "1.1.1"}
  "bencode" {>= "1.0.2"}
  "ounit" {>= "2.0.0"}
  ]
descr: "
Bittorrent client

Sawadee is a bittorrent/DHT client.
"
