(executables
 (names test_dht test_krpc_packet)
 (libraries dht core ppx_jane async oUnit)
 (preprocess (pps ppx_jane)))

;  (alias
;  ((name    runtest)
;   (deps    (test_dht.bc))
;   (action  (run ${<}))))

; (alias
;  ((name    runtest)
;   (deps    (test_krpc_packet.bc))
;   (action  (run ${<}))))